--- a/Project/android/res/values/strings.xml
+++ b/Project/android/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Straight Way</string>
+    <string name="app_name">Robot Legend</string>
 
 </resources>
